<?xml version="1.0" encoding="UTF-8"?>
<!-- Created by Spreadst -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/soundbackground"
    android:orientation="vertical" >
    <RelativeLayout
        android:id="@+id/wavesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" >
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/timerViewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/opt_button"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:id="@+id/timerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingBottom="1dp"
            android:gravity="center_horizontal"
            android:textColor="#4b4c57"
            android:textSize="44sp" />

        <TextView
            android:id="@+id/record_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timerView"
            android:layout_alignRight="@id/timerView"
            android:text="@string/recording"
            android:layout_marginTop="5dp"
            android:paddingBottom="8dp"
            android:layout_marginRight="5dp"
            android:textColor="#4b4c57"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/opt_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/previousButton"
            android:layout_width="90dp"
            android:layout_height="75dp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="36dp"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:drawableLeft="@drawable/before_tag_disabled"
            android:drawablePadding="-5dp"
            android:text="@string/previous_tag"
            android:textColor="#d3d3d3" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_record_play_btn"
            android:src="@drawable/custom_record_play_btn" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="90dp"
            android:layout_height="75dp"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:drawablePadding="-5dp"
            android:drawableRight="@drawable/next_tag_disabled"
            android:text="@string/next_tag"
            android:textColor="#d3d3d3" />
    </RelativeLayout>



</RelativeLayout>