<?xml version="1.0" encoding="UTF-8"?>
<!-- Created by Spreadst -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_bar_background"
                android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/wavesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/timerViewLayout"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="80dp">
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/timerViewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/opt_button"
        android:background="@color/record_time_show_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:id="@+id/timerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:paddingBottom="1dp"
            android:textColor="@color/timer_view_bg"
            android:textSize="44dp"/>

        <TextView
            android:id="@+id/record_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@id/timerView"
            android:paddingBottom="8dp"
            android:text="@string/recording"
            android:textColor="@color/timer_view_bg"
            android:textSize="14dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/opt_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:descendantFocusability="blocksDescendants"
        android:background="@color/record_time_show_bg"
    >
        <Button
            android:id="@+id/previousButton"
            android:layout_width="90dp"
            android:layout_height="75dp"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="36dp"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:drawableLeft="@drawable/before_tag_disabled"
            android:drawablePadding="-5dp"
            android:text="@string/previous_tag"
            android:textColor="#d3d3d3"/>

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_record_play_btn"
            android:src="@drawable/custom_record_play_btn"/>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="90dp"
            android:layout_height="75dp"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:drawablePadding="-5dp"
            android:drawableRight="@drawable/next_tag_disabled"
            android:text="@string/next_tag"
            android:textColor="#d3d3d3"/>
    </RelativeLayout>


</RelativeLayout>